--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
 .header__title {
@@ -35,10 +36,9 @@
   position: absolute;
   width: 646px;
   height: 568px;
-  top: 148px;
-  right: 280px;
+  top: 124px;
+  right: 5px;
   max-width: 568px;
-  margin: 124px 5px 80;
 }
 
 .header__description {
