--- a/pages/index.css
+++ b/pages/index.css
@@ -1,259 +1,115 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+
+.about {
+  padding: 100px 80px 173px;
+  background-color: #0a2850;
+  color: #fff;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
-.header {
-  padding: 30px 80px 40px;
-  min-height: 720px;
-  max-height: 880px;
-  height: 100vh;
+.about__title {
+  margin: 0;
+  max-width: 251px;
+  font-size: 44px;
+  font-family: "Inter";
+  font-style: normal;
+  line-height: 52px;
+  font-weight: 500;
+}
+
+.about__content {
+  max-width: 660px;
   display: flex;
   flex-direction: column;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
+  margin-left: auto;
+  margin-top: 19px;
 }
 
-.header__title {
-  max-width: 729px;
-  font-size: 60px;
-  margin: 183px 0 0;
-  letter-spacing: -0.6px;
-  font-weight: 500;
-  font-family: "Inter";
-  font-style: normal;
-  line-height: 72px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-}
-
-.header__description {
-  max-width: 683px;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 28px 0 0;
+.about__paragraph {
   font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
-}
-
-.header__span-accent {
-  display: block;
-  color: #2f80ed;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
-  gap: 20px;
-  margin: 0;
-  font-family: "Inter";
-  font-size: 16px;
-  line-height: 20px;
-  font-style: normal;
-  font-weight: 500;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000;
-}
-.nav__link:hover {
-  color: #2f80ed;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  font-family: "Inter, Arial, sans-serif";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.header__paragraph {
-  margin-top: auto;
-  line-height: 0px;
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.recipes__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  font-weight: 500;
-  font-size: 44px;
-  max-width: 580px;
-  line-height: 52px;
-  color: #ffff;
 }
 
-.recipes__subtitle {
-  font-family: "Noto Serif, Times New Roman, serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  color: #ffff;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  margin-top: 80px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  margin: auto;
-  border: none;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffff;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  padding: 0;
-  margin: 0;
-  border: none;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__label {
-  margin-bottom: 32px;
-  display: block;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-}
-
-.form__input {
-  display: block;
-  padding: 15px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 8px;
-  border-radius: 4px;
-  border: none;
-  height: 60px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__button {
-  width: 100%;
-  padding: 0;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  height: 60px;
+.about__circle {
+  position: static;
+  border-radius: 50%;
+  width: 426px;
+  height: 426px;
   background-color: #2f80ed;
-  border-radius: 4px;
-  color: #ffffff;
-  border: none;
+  margin-top: -252px;
+  margin-left: -209px;
 }
 
-.form__button:hover {
-  opacity: 0.7;
-  transition-duration: 1s;
+.footer {
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  color: #fff;
 }
 
-.form__checkbox {
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+  padding: 60px 80px 60px 80px;
+}
+
+.footer__logo {
+  width: 39px;
+  height: 105px;
+}
+
+.footer__social_icon {
+  width: 16px;
+  height: 16px;
+}
+
+.footer_social-heading {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 20px;
+  padding-left: 80px;
+}
+
+.footer__social-link {
+  text-decoration: none;
+  color: #fff;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__social-link:hover {
+  color: #c1c1c1;
+  transition-duration: 1.5s;
+}
+
+.footer__list {
+  list-style-type: none;
+  padding-left: 80px;
+}
+
+.footer__copyright {
+  padding-bottom: 60px;
+  padding-left: 80px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
