--- a/blocks/about.css
+++ b/blocks/about.css
@@ -48,10 +48,10 @@
 
 .about__circle_animation_blurred {
   transform-origin: center;
-  animation: placeholder 1.5s ease-in-out 0s infinite;
+  animation: pulsate 1.5s ease-in-out 0s infinite;
 }
 
-@keyframes placeholder {
+@keyframes pulsate {
   0% {
     opacity: 0;
   }
