--- a/pages/index.css
+++ b/pages/index.css
@@ -7,68 +7,4 @@
 @import url(../blocks/form.css);
 @import url(../blocks/menu.css);
 @import url(../blocks/about.css);
-
-.footer {
-  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  color: #fff;
-  margin: 0;
-}
-
-.footer__content {
-  display: flex;
-  justify-content: space-between;
-  padding: 60px 80px 60px 80px;
-}
-
-.footer__logo {
-  width: 39px;
-  height: 105px;
-}
-
-.footer__social_icon {
-  width: 16px;
-  height: 16px;
-}
-
-.footer_social-heading {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 20px;
-  padding-left: 80px;
-}
-
-.footer__social-link {
-  text-decoration: none;
-  color: #fff;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer__social-link:hover {
-  color: #c1c1c1;
-  transition-duration: 1.5s;
-}
-
-.footer__list {
-  list-style-type: none;
-  padding-left: 80px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.footer__copyright {
-  padding-bottom: 60px;
-  padding-left: 80px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url(../blocks/footer.css);
