--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,5 +1,5 @@
 .about {
-  padding: 100px 80px 173px;
+  padding: 100px 80px 173px 0;
   background-color: #0a2850;
   color: #fff;
   overflow: hidden;
@@ -12,12 +12,13 @@
   margin: 0;
   max-width: 251px;
   font-size: 44px;
-  font-family: "Inter";
+  font-family: Inter, Arial, sans- serif;
   font-style: normal;
   line-height: 52px;
   font-weight: 500;
   z-index: 1;
   position: relative;
+  padding-left: 80px;
 }
 
 .about__content {
@@ -25,15 +26,17 @@
   display: flex;
   flex-direction: column;
   margin-left: auto;
-  margin-top: 19px;
 }
 
 .about__paragraph {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif, Times New Roman, serif";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  display: flex;
+  gap: 20px;
+  margin-top: 0px;
 }
 
 .about__circle {
