--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,33 +7,32 @@
 .footer__content {
   display: flex;
   justify-content: space-between;
-  padding: 60px 80px 60px 80px;
+  padding: 60px 80px 0 80px;
 }
 
 .footer__logo {
-  width: 39px;
-  height: 105px;
+  height: 39px;
+  width: 105px;
 }
 
-.footer__social_icon {
+.footer__social-icon {
   width: 16px;
   height: 16px;
 }
 
-.footer_social-heading {
-  font-family: "Inter";
+.footer__social-heading {
+  font-family: "Inter", Arial, sans- serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 20px;
-  padding-left: 80px;
 }
 
 .footer__social-link {
   text-decoration: none;
   color: #fff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans- serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -53,6 +52,7 @@
   align-items: center;
   flex-direction: column;
   gap: 16px;
+  margin: 0;
 }
 
 .footer__list-item {
@@ -69,4 +69,6 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  margin-top: 108px;
+  margin-bottom: 0;
 }
