--- a/blocks/form.css
+++ b/blocks/form.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0;
   border: none;
-  font-family: Inter;
+  font-family: "Inter, Arial, sans-serif";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -31,14 +31,15 @@
   box-sizing: border-box;
   margin-top: 8px;
   border-radius: 4px;
-  border: none;
+  border-width: 1px;
   height: 60px;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  color: #838383;
+  border-color: #838383;
+  border-style: solid;
 }
 
 .form__button {
