--- a/blocks/header.css
+++ b/blocks/header.css
@@ -18,7 +18,7 @@
   margin: 183px 0 0;
   letter-spacing: -0.6px;
   font-weight: 500;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   line-height: 72px;
 }
@@ -64,5 +64,8 @@
 
 .header__paragraph {
   margin-top: auto;
-  line-height: 0px;
+  line-height: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 0;
 }
