--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -9,7 +9,7 @@
 .menu__title {
   text-align: center;
   margin: 0 0 24px;
-  font-family: "Inter";
+  font-family: "Inter, Arial, sans-serif";
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -18,12 +18,14 @@
 
 .menu__subtitle {
   text-align: center;
-  margin: 0 0 100px;
-  font-family: "Noto Serif";
+  margin: 0;
+  margin-bottom: 100px;
+  font-family: "Noto Serif, Times New Roman, serif";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  max-width: 780px;
 }
 
 .menu__cards {
@@ -34,46 +36,4 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-}
-
-.card {
-  width: 540px;
-}
-
-.card__title {
-  margin: 0 0 32px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.card__list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.card__list-item {
-  margin-bottom: 16px;
-}
-
-.card__list-item:last-child {
-  margin-bottom: 0;
-}
-
-.card__list-item {
-  display: flex;
-  gap: 8px;
-}
-
-.card__list-divider {
-  border-bottom: 1px solid black;
-  flex-grow: 1;
 }
