--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -16,7 +16,7 @@
   padding: 0;
   gap: 20px;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter, Arial, sans-serif";
   font-size: 16px;
   line-height: 20px;
   font-style: normal;
