--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -9,7 +9,7 @@
 .menu__title {
   text-align: center;
   margin: 0 0 24px;
-  font-family: "Inter, Arial, sans-serif";
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -18,14 +18,13 @@
 
 .menu__subtitle {
   text-align: center;
-  margin: 0;
-  margin-bottom: 100px;
-  font-family: "Noto Serif, Times New Roman, serif";
+  font-family: "Noto Serif", Times New Roman, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   max-width: 780px;
+  margin: 0 auto;
 }
 
 .menu__cards {
@@ -34,6 +33,6 @@
   flex-wrap: wrap;
   gap: 100px;
   padding: 0;
-  margin: 0;
+  margin-top: 100px;
   list-style-type: none;
 }
