--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -48,7 +48,7 @@
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter, Arial, sans-serif";
+  font-family: "Inter" Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
