--- a/blocks/about.css
+++ b/blocks/about.css
@@ -12,7 +12,7 @@
   margin: 0;
   max-width: 251px;
   font-size: 44px;
-  font-family: Inter, Arial, sans- serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   line-height: 52px;
   font-weight: 500;
@@ -29,7 +29,7 @@
 }
 
 .about__paragraph {
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -37,8 +37,11 @@
   display: flex;
   gap: 20px;
   margin-top: 0px;
+  margin-bottom: 32px;
 }
-
+.about__paragraph :last-child {
+  margin: 0;
+}
 .about__circle {
   position: absolute;
   border-radius: 50%;
