--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -21,18 +21,19 @@
 }
 
 .footer__social-heading {
-  font-family: "Inter", Arial, sans- serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .footer__social-link {
   text-decoration: none;
   color: #fff;
-  font-family: "Inter", Arial, sans- serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -64,7 +65,7 @@
 .footer__copyright {
   padding-bottom: 60px;
   padding-left: 80px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
