--- a/blocks/form.css
+++ b/blocks/form.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0;
   border: none;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   gap: 12px;
+  margin-bottom: 0;
 }
 
 .form__input {
@@ -33,7 +34,7 @@
   border-radius: 4px;
   border-width: 1px;
   height: 60px;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
