--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -18,7 +18,7 @@
 
 .menu__subtitle {
   text-align: center;
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
