--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -7,7 +7,7 @@
   background-position: center;
 }
 .recipes__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-weight: 500;
@@ -20,7 +20,7 @@
 }
 
 .recipes__subtitle {
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
