--- a/blocks/about.css
+++ b/blocks/about.css
@@ -37,9 +37,9 @@
   display: flex;
   gap: 20px;
   margin-top: 0px;
-  margin-bottom: 32px;
+  margin-bottom: 0 auto;
 }
-.about__paragraph :last-child {
+.about__paragraph:last-child {
   margin: 0;
 }
 .about__circle {
