--- a/blocks/header.css
+++ b/blocks/header.css
@@ -30,6 +30,7 @@
   height: 568px;
   top: 124px;
   right: 5px;
+  z-index: 0;
 }
 
 .header__description {
@@ -40,6 +41,7 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
+  z-index: 1;
 }
 
 .header__span-accent {
