--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -9,7 +9,7 @@
 .menu__title {
   text-align: center;
   margin: 0 0 24px;
-  font-family: "Inter" Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -35,4 +35,5 @@
   padding: 0;
   margin-top: 100px;
   list-style-type: none;
+  margin-bottom: 0;
 }
