--- a/blocks/about.css
+++ b/blocks/about.css
@@ -37,7 +37,7 @@
   display: flex;
   gap: 20px;
   margin-top: 0px;
-  margin-bottom: 0 auto;
+  margin-bottom: 20px;
 }
 .about__paragraph:last-child {
   margin: 0;
